--- a/GenteBoa - Que Doa/Releases/v1.0.0.md
+++ b/GenteBoa - Que Doa/Releases/v1.0.0.md
@@ -6,7 +6,7 @@ Entregar o Mínimo Produto Viável (MVP) para utilização em ambiente controlad
 
 ## Features
 
-- ### Cadastrar Usuário
+- ### [Cadastrar Usuário](../Histórias/Usuários/Cadastrar Usuário.md)
 
 - ### Autenticar Usuário
 
