--- a/GenteBoa - Que Doa/Releases/v1.0.0.md
+++ b/GenteBoa - Que Doa/Releases/v1.0.0.md
@@ -6,9 +6,9 @@ Entregar o Mínimo Produto Viável (MVP) para utilização em ambiente controlad
 
 ## Features
 
-- ### [Cadastrar Usuário](../Histórias/Usuários/Cadastrar Usuário.md)
+- ### [Cadastrar Usuário](../Histórias/Usuários/Cadastrar%20Usuário.md)
 
-- ### Autenticar Usuário
+- ### [Autenticar Usuário](../Histórias/Usuários/Autenticar%20Usuário.md)
 
 - ### Cadastrar Meus Itens de Doação
 
